Segundo commit, se arreglaron problemas de enlaces entre la web

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <header>
         <div class="icono_head">
             <a href="https://maps.app.goo.gl/Nm94ca434PZSQ1Jo7" target="_blank">
-                <img src="/img/icons/icono-puente.png" alt="Icono Puente">
+                <img src="./img/icons/icono-puente.png" alt="Icono Puente">
             </a>
         </div>
         <div class="icono_trueno">
-            <a href="/index.html"><img src="/img/icons/icono-trueno.png" alt="Icono Trueno">
+            <a href="/index.html"><img src="./img/icons/icono-trueno.png" alt="Icono Trueno">
             </a>
         </div>
         <div class="icono_head">
             <a href="https://maps.app.goo.gl/Nm94ca434PZSQ1Jo7" target="_blank" rel="noopener noreferrer">
-                <img src="/img/icons/icono-dedos.png" alt="Icono Dedos">
+                <img src="./img/icons/icono-dedos.png" alt="Icono Dedos">
             </a>
         </div>
     </header>
@@ -35,7 +35,7 @@
         <div class="baner">
             <div class="apartados">
                 <div class="secciones">
-                    <a href="/pages/musica.html">
+                    <a href="./pages/musica.html">
                         <img src="./img/icons/icono-album-música.png" alt="Musica">
                     </a>
                 </div>
