--- a/pages/musica.html
+++ b/pages/musica.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Trueno</title>
 </head>
 
@@ -17,16 +17,16 @@
     <header>
         <div class="icono_head">
             <a href="https://maps.app.goo.gl/Nm94ca434PZSQ1Jo7" target="_blank">
-                <img src="/img/icons/icono-puente.png" alt="Icono Puente">
+                <img src="../img/icons/icono-puente.png" alt="Icono Puente">
             </a>
         </div>
         <div class="icono_trueno">
-            <a href="/index.html"><img src="/img/icons/icono-trueno.png" alt="Icono Trueno">
+            <a href="../index.html"><img src="../img/icons/icono-trueno.png" alt="Icono Trueno">
             </a>
         </div>
         <div class="icono_head">
             <a href="https://maps.app.goo.gl/Nm94ca434PZSQ1Jo7" target="_blank" rel="noopener noreferrer">
-                <img src="/img/icons/icono-dedos.png" alt="Icono Dedos">
+                <img src="../img/icons/icono-dedos.png" alt="Icono Dedos">
             </a>
         </div>
     </header>
@@ -34,8 +34,8 @@
     <main>
         <div class="fondo_musica">
             <div class="icono_musica">
-                <a href="/pages/musica.html">
-                    <img src="/img/icons/icono-album-música.png" alt="Musica"></a>
+                <a href="../pages/musica.html">
+                    <img src="../img/icons/icono-album-música.png" alt="Musica"></a>
             </div>
         
             <div class="articulos_spoti">
@@ -64,7 +64,7 @@
     </main>
     <footer>
         <div class="redes">
-            <a target="_blank" href="https://www.instagram.com/trueno/?hl=es" ><img src="/img/icons/icons-instagram.png" alt="Instagram"></a>
+            <a target="_blank" href="https://www.instagram.com/trueno/?hl=es" ><img src="../img/icons/icons-instagram.png" alt="Instagram"></a>
             <h5>&#169 Copyright · Todos los derechos reservados a Trueno</h5>    
         </div>
     </footer>
